fix spacing on header links secondary

--- a/wp-content/themes/barrick-react/src/App.css
+++ b/wp-content/themes/barrick-react/src/App.css
@@ -191,7 +191,7 @@ a {
 }
 
 .header-links-container.small {
-  min-width: 156px;
+  min-width: 165px;
   width: 43%;
   margin: 0;
   justify-content: space-between;
